<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Inventory</string>
    <string name="sell">Sell</string>
    <string name="quantity">Quantity in Stock:</string>
    <string name="quantity_req">Quantity in Stock <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Item Name <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Item Price <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="price">Price</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
    <string name="provider">Provider:</string>
    <string name="provider_email">Provider Email:</string>
    <string name="provider_phone">Provider Phone:</string>
    <string name="provider_req">Provider <font color='#FF0000'>*</font></string>
    <string name="provider_email_req">Provider Email <font color='#FF0000'>*</font></string>
    <string name="provider_phone_req">Provider Phone <font color='#FF0000'>*</font></string>
    <string name="share">Share</string>
    <string name="preferences">Preferences</string>
    <string name="default_provider_name">Default provider name</string>
    <string name="default_provider_email">Default provider Email</string>
    <string name="default_provider_phone">Default provider phone</string>
    <string name="substitute_default_values">Substitute default values</string>
    <string name="hide_sensitive_data">Hide sensitive data</string>
    <string name="forbid_data_sharing">Forbid data sharing</string>
    <string name="save_to_file">Save to file</string>
    <string name="load_item_from_file">Load item from file</string>
    <string name="item_source">Item source:</string>
</resources>